--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -25,7 +25,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <strong class="mb-0">Change Map Zoom</strong>
-                                    <p class="text-muted mb-0">Select your default map zoom.</p>
+                                    <p class="text-muted mb-0">Select your default map zoom</p>
                                 </div>
                                 <button class="btn btn-light" data-toggle-section="mapZoomForm">
                                     <i class="fas fa-chevron-down"></i>
@@ -48,7 +48,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <strong class="mb-0">Distance Units</strong>
-                                    <p class="text-muted mb-0">Please select prefered units of Distance</p>
+                                    <p class="text-muted mb-0">Please select prefered units of distance</p>
                                 </div>
                                 <div id="UnitsForm" class="mt-3" style="display: none;">
                                     <div class="form-group mb-3">
@@ -107,7 +107,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <strong class="mb-0">Change Password</strong>
-                                    <p class="text-muted mb-0">Update your Password.</p>
+                                    <p class="text-muted mb-0">Update your password</p>
                                 </div>
                                 <button class="btn btn-light" data-toggle-section="passwordForm">
                                     <i class="fas fa-chevron-down"></i>
@@ -135,7 +135,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <strong class="mb-0 text-danger">Delete Account</strong>
-                                    <p class="text-muted mb-0">Permanently remove your account.</p>
+                                    <p class="text-muted mb-0">Permanently remove your account</p>
                                 </div>
                                 <button class="btn btn-light" data-toggle-section="deleteAccountForm">
                                     <i class="fas fa-chevron-down"></i>
